--- a/cadoc/ocorrencias/templates/ocorrencias/ocorrencia_form.html
+++ b/cadoc/ocorrencias/templates/ocorrencias/ocorrencia_form.html
@@ -1,3 +1,6 @@
+<body>
+
+
 {% extends "base/base.html" %}
 {% load bootstrap3 %}
 {% load static %}
@@ -77,3 +80,4 @@ $(function () {
   })
 </script>
 {% endblock %}
+</body>
